Revision history for Catmandu-SRU

{{$NEXT}}

0.429  2020-07-08 14:52:17 CEST
  - add total option to constrain the result set

0.428  2019-11-29 11:19:18 CET
  - correctly handle utf8 characters in query

0.427  2019-09-27 11:56:22 CEST
  - replace Furl with HTTP::Tiny to support Ipv6

0.426  2019-09-23 10:04:01 CEST
  - work around issue with url returned by Test::HTTP::LocalServer 0.66 

0.425  2019-09-20 10:11:50 CEST
  - add missing dependencies

0.424  2019-08-26 13:59:52 CEST
  - remove the picaxml parser (now part of Catmandu-PICA)

0.423  2019-08-26 13:23:18 CEST
  - Fix travis configuration
  - new search_sru fix

0.422  2019-05-22 11:28:26 CEST
  - Fixing tests

0.421  2018-03-26 10:23:27 CEST
  - Fixing test

0.42  2018-03-26 10:01:46 CEST
  - Add pica parser
  - Fix treatment of namespaces in meta Parser (#31)
  - Making batch sizes configurable

0.41  2017-07-12 09:17:12 CEST
  - Fixing MODS encoding issue

0.040  2017-07-07 08:35:12 CEST
  - Adding support for namespace prefixes declared in the SRU response header
  - Adding a `mods` parser
  - Adding a `meta` parser

0.039  2016-11-07 13:41:07 CET
  - documentation and tests

0.038  2014-10-21 22:56:17 CEST
  - Added missing test requirement Test::Exception

0.037  2014-06-22 10:24:58 CEST
  - Fixing multiple harvesting of first record set bug

0.036  2014-06-18 20:24:19 CEST
  - Fixing prove vs perl testing bug

0.035  2014-06-18 10:01:24 CEST
  - Add better support for namespace prefixes

0.034  2014-05-29 16:45:37 CEST
  - building code with Dist::Milla
  - updating pod

0.033 2014-03-03
  - credits

0.032 2014-02-21
  - adding support for pluggable callback functions to parse SRU responses
  - adding url method
  - adding simple and struct record parsers
  - tests
  - pod

0.031 2014-02-20
  - adding backwards compatibility for LibXML::Simple responses

0.03  2014-02-20
  - adding support for pluggable SRU response parsers
  - tests
  - pod

0.02  2014-02-20
  - pod
  - tests