@@ -1,6 +1,7 @@
 Revision history for Catmandu-SRU
 
 {{$NEXT}}
+  - allow query parameters in base URL
 
 0.429  2020-07-08 14:52:17 CEST
   - add total option to constrain the result set
